2005-11-17  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ColorConverter.cs: added testcases for ConvertFrom and 
	three digit notaion color.

2005-10-23  Jonathan Gilbert  <logic@deltaq.org>

	* TestBitmap.cs (Rotate1bit4bit): Added test for rotation & flipping
	  of indexed (1- and 4-bit) Bitmaps.
	* 1bit.png, 4bit.png: Added to 'bitmaps' subdirectory.

2005-09-19  Miguel de Icaza  <miguel@novell.com>

	* TestGraphics.cs (LoadIndexed): Add test for the indexed bug.

2005-09-16  Sebastien Pouliot  <sebastien@ximian.com>

	* BitmapCas.cs: New. CAS unit tests for Bitmap.
	* GraphicsCas.cs: New. CAS unit tests for Graphics.
	* ColorConverter.cs, ColorTranslator.cs, TestBrushes.cs, TestBitmap.cs
	TestColor.cs, TestFont.cs, TestIcon.cs, TestIconConverter.cs,
	TestImage.cs, TestImageConverter.cs, TestImageFormatConverter.cs,
	TestPens.cs, TestPoint.cs, TestPointF.cs, TestPointConverter.cs,
	TestRectangle.cs, TestRectangleF.cs, TestRectangleConverter.cs,
	TestRegion.cs, TestSizeConverter.cs, TestSize.cs, TestSizeF.cs,
	TestStringFormat.cs, TestSystemBrushes.cs, TestSystemPens.cs: Deny 
	UnmanagedCode permission to all tests. This shows (when executed under
	MS runtime) that S.D API is safe and doesn't requires high privileges
	to run - even if we know that, deep down, this calls into GDI+.

2005-09-14 Jordi Mas i Hernandez <jordi@ximan.com>

	* TestGraphics.cs: Adds default properties, properties set/get and save
	and restore status test

2005-09-13 Jordi Mas i Hernandez <jordi@ximan.com>

	* TestGraphics.cs: resets graphics object status before every SetClip test

2005-09-12 Gert Driesen <drieseng@users.sourceforge.net>

	* TestImageConverter.cs: Re-enabled GetProperties test.
	* TestPointConverter.cs: same.
	* TestRectangleConverter.cs: same.
	* TestSizeConverter.cs: same.

2005-09-06 Jordi Mas i Hernandez <jordi@ximan.com>

	* TestImagge.cs: File not found exception, related to fix r49744
	* TestBimap.cs: File not found exception, related to fix r49744
